# brainglobe-registration

./: .gitignore  .pre-commit-config.yaml  .pytest-intensity-status.txt  .pytest-intensity.xml  LICENSE  MANIFEST.in  README.md  pull request.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
brainglobe_registration/: automated_target_selection.py  napari.yaml  optical_flow.py  registration_widget.py  sample_data.py  similarity_metrics.py  similarity_metrics_1.py  slab_slice_selection.py  target_selection_widget.py
brainglobe_registration/elastix/: register.py
brainglobe_registration/parameters/ara_tools/: affine.txt  bspline.txt
brainglobe_registration/parameters/brainglobe_registration/: affine.txt  automated_reg_affine.txt  bspline.txt
brainglobe_registration/parameters/brainregister_IBL/: bspline.txt
brainglobe_registration/parameters/elastix_default/: affine.txt  bspline.txt  rigid.txt
brainglobe_registration/preprocessing/: mask_generator.py
brainglobe_registration/utils/: atlas.py  atlas_rotation.py  brainglobe_logo.py  file.py  logging.py  napari.py  plane_sampling.py  preprocess.py  transforms.py  utils.py  visuals.py
brainglobe_registration/widgets/: adjust_moving_image_view.py  crop_atlas_view.py  mask_regions.py  parameter_list_view.py  qc_widget.py  select_images_view.py  similarity_metrics_widget.py  target_selection_widget.py  transform_select_view.py
notebooks/: similarity_metrics_demo.ipynb
parameters/: rigid.txt
parameters/ara_tools/: affine.txt  bspline.txt
parameters/brainregister_IBL/: affine.txt  bspline.txt
src/bg_elastix/: __init__.py  _widget.py  napari.yaml  registration_widget.py
src/bg_elastix/_tests/: test_widget.py
src/bg_elastix/elastix/: register.py
src/bg_elastix/utils/: brainglobe_logo.py
src/bg_elastix/widgets/: adjust_moving_image_view.py  parameter_list_view.py  run_settings_select_view.py  select_images_view.py
src/brainglobe_registration/: __init__.py  _widget.py  napari.yaml  registration_widget.py
src/brainglobe_registration/elastix/: register.py
src/brainglobe_registration/parameters/elastix_default/: affine.txt  bspline.txt
src/brainglobe_registration/resources/: sample_hipp.tif
src/brainglobe_registration/utils/: brainglobe_logo.py  utils.py
src/brainglobe_registration/widgets/: adjust_moving_image_view.py  parameter_list_view.py  run_settings_select_view.py  select_images_view.py  transform_select_view.py
src/tests/: conftest.py  test_adjust_moving_image_view.py  test_parameter_list_view.py  test_register.py  test_registration_widget.py  test_select_images_view.py  test_transform_select_view.py  test_utils.py
src/tests/test_images/: Atlas_Hipp.tif
tests/: conftest.py  test_adjust_moving_image_view.py  test_automated_target_selection.py  test_mask_generator.py  test_mask_regions_dialog.py  test_optical_flow.py  test_parameter_list_view.py  test_plane_sampling.py  test_register.py  test_registration_widget.py  test_select_images_view.py  test_similarity_metrics.py  test_similarity_metrics_1.py  test_similarity_metrics_widget.py  test_target_selection_widget.py  test_transform_select_view.py  test_transforms.py  test_utils.py  test_visuals.py
tests/test_images/: Atlas_Str.tif  InverseTransformParameters.0.txt  TransformParameters.0.txt  areas.csv  boundaries.tiff  deformation_field_0.tiff  deformation_field_1.tiff  downsampled.tiff  inverted_reference.tiff  registered_atlas.tiff  registered_hemispheres.tiff  registered_reference.tiff  registered_sample.tiff
tests/test_images/non_linear/: InverseTransformParameters.0.txt  InverseTransformParameters.1.txt  TransformParameters.0.txt  TransformParameters.1.txt  areas.csv  boundaries.tiff  deformation_field_0.tiff  deformation_field_1.tiff  inverted_reference.tiff  registered_atlas.tiff  registered_hemispheres.tiff  registered_reference.tiff  registered_sample.tiff
tests/test_utils/: test_atlas.py  test_file.py  test_napari.py  test_transforms.py
