[project]
name = "brainglobe-registration"
authors = [{name = "Brainglobe Developers", email= "hello@brainglobe.info"}]
description = "A napari plugin for registration to a  BrainGlobe atlas."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "napari>=0.4.18,<0.6.0",
    "brainglobe-atlasapi",
    "brainglobe-utils>=0.4.3",
    "dask",
    "dask-image",
    "itk-elastix",
    "lxml_html_clean",
    "numpy",
    "pandas",
    "pytransform3d",
    "qtpy",
    "qt-niu",
    "scikit-image",
    "scipy"
]

[project.urls]
"Homepage" = "https://brainglobe.info"
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-registration/issues"
"Documentation" = "https://github.com/brainglobe/brainglobe-registration#README.md"
"Source Code" = "https://github.com/brainglobe/brainglobe-registration"
"User Support" = "https://forum.image.sc/tag/brainglobe"

[project.entry-points."napari.manifest"]
brainglobe-registration = "brainglobe_registration:napari.yaml"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-qt",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "pyqt5"
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_registration*"]
exclude = ["tests", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe_registration"
testpaths = "tests"
markers = [
    "slow: mark test as slow"
]

[tool.black]
target-version = ['py311', 'py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_registration --cov-report=xml
"""
